# clawdius

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
services/ddgs/: Dockerfile
src/: openclaw_wrapper.py
src/core/: config.py  llm.py
src/interfaces/: discord_bot.py
src/tools/: browser.py  registry.py
tests/: test_brain.py
